--- a/index.html
+++ b/index.html
@@ -542,10 +542,6 @@
                     <h3 id="2010"><i class="fa fa-clock-o"></i>&nbsp;2010-变局也是开局之年</h3>
                     <li>
                         <span>2010</span>
-                        <p><span>腾讯推出 QQ 商城【腾讯】</span></p>
-                    </li>
-                    <li>
-                        <span>2010</span>
                         <p><span class="title" title="淘宝商城也就是后来的天猫">淘宝商城第二届“双 11”购物节收入爆表【淘宝】</span></p>
                     </li>
                     <li>
@@ -566,6 +562,10 @@
                     </li>
                     <li>
                         <span>2010-3</span>
+                        <p><span>QQ会员官方店升级为QQ商城【腾讯】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-3</span>
                         <p><span>陈欧发起一个新项目-团美，也就是后来的聚美优品【陈欧】</span></p>
                     </li>
                     <li>
@@ -581,24 +581,56 @@
                         <p class="important"><span>小米公司成立【雷军】</span></p>
                     </li>
                     <li>
+                        <span>2010-8</span>
+                        <p><span class="title" title="康盛创想号称中国最大的社区软件平台及服务提供商">腾讯宣布收购康盛创想</span></p>
+                    </li>
+                    <li>
+                        <span>2010-8-16</span>
+                        <p class="important"><span title="MIUI一开始是基于AOSP（Android开源项目）来做的">MIUI上线【小米】</span></p>
+                    </li>
+                    <li>
                         <span>2010-12</span>
                         <p><span>当当登陆纽交所【李国庆】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-冬</span>
+                        <p><span class="title" title="开始号称中国移动互联网第一股">斯凯递交了赴美IPO招股书【宋涛】</span></p>
                     </li>
                 </div>
                 <!-- 2011 年 -->
                 <div>
                     <h3 id="2011"><i class="fa fa-clock-o"></i>&nbsp;2011-移动互联网的新基建</h3>
                     <li>
-                        <span>2010-4</span>
-                        <p class="important"><span>小米公司成立【雷军】</span></p>
+                        <span>2011-4</span>
+                        <p><span>乐蛙创立【赵力，袁潜龙】</span></p>
+                    </li>
+                    <li>
+                        <span>2011-7-28</span>
+                        <p><span>阿里云退出阿里云 OS，并发布基于阿里云 OS 的智能手机天语K-Touch W700【阿里】</span></p>
                     </li>
                 </div>
                 <!-- 2012 年 -->
                 <div>
                     <h3 id="2012"><i class="fa fa-clock-o"></i>&nbsp;2012-新供给爆了</h3>
                     <li>
+                        <span>2012</span>
+                        <p><span>客如云成立，这是一家为餐饮企业提供软件及服务的公司【彭雷】</span></p>
+                    </li>
+                    <li>
+                        <span>2012-年中</span>
+                        <p><span>腾讯收购乐蛙</span></p>
+                    </li>
+                    <li>
                         <span>2012-夏</span>
                         <p><span>华为的任正非在一个讲话中提到两个“备胎”计划，一个是关于芯片的，另一个就是关于操作系统的【任正非】</span></p>
+                    </li>
+                </div>
+                <!-- 2020 年 -->
+                <div>
+                    <h3 id="2020"><i class="fa fa-clock-o"></i>&nbsp;2020-终结与开启</h3>
+                    <li>
+                        <span>2020-春</span>
+                        <p><span class="title" title="阿里本地生活形成了以“到家—饿了么、到店—口碑网、商家数字化—客如云”三驾马车驱动的体系结构">阿里本地生活收购客如云【阿里】</span></p>
                     </li>
                 </div>
             </ul>
