--- a/index.html
+++ b/index.html
@@ -554,6 +554,10 @@
                     </li>
                     <li>
                         <span>2010</span>
+                        <p><span>QQ 医生与 QQ 软件管理合并，成为 QQ 电脑管家【腾讯】</span></p>
+                    </li>
+                    <li>
+                        <span>2010</span>
                         <p class="important"><span class="title" title="第一家没有上市的“独角兽”公司">凡客拿到巨额融资【凡客】</span></p>
                     </li>
                     <li>
@@ -581,16 +585,72 @@
                         <p class="important"><span>小米公司成立【雷军】</span></p>
                     </li>
                     <li>
+                        <span>2010-6</span>
+                        <p><span>酷6网在美国纳斯达克借壳上市【酷6网】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-7-24</span>
+                        <p><span>马化腾坐倒在椅子上，口中喃喃自语：“他们怎么可以骂人？”【腾讯传】</span></p>
+                    </li>
+                    <li>
                         <span>2010-8</span>
                         <p><span class="title" title="康盛创想号称中国最大的社区软件平台及服务提供商">腾讯宣布收购康盛创想</span></p>
+                    </li>
+                    <li>
+                        <span>2010-8</span>
+                        <p><span>乐视在国内创业板上市【乐视】</span></p>
                     </li>
                     <li>
                         <span>2010-8-16</span>
                         <p class="important"><span title="MIUI一开始是基于AOSP（Android开源项目）来做的">MIUI上线【小米】</span></p>
                     </li>
                     <li>
+                        <span>2010-9</span>
+                        <p><span>周鸿祎就曾给马化腾发去数条短信，内容包括建议腾讯投资360，而360“做出一个拦截百度的东西，先打掉它30%的医疗收入”。但是这个建议被马化腾拒绝了。【腾讯传，特别的是周鸿祎的自传中没有这一段】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-9-2</span>
+                        <p><span>雷军发表微博：“今天的互联网就是江湖，单打独斗肯定不行。兄弟们，一定要团结一切可以团结的力量，抱团打天下！”，这段话被认为是金山联手腾讯出战 360 的“证据”【金山，腾讯】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-9-22</span>
+                        <p class="important"><span>3Q 大战打响【腾讯，360】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-10-4</span>
+                        <p><span>360 开始进行针对 QQ 的封闭开发【腾讯，360】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-10-14</span>
+                        <p><span>腾讯正式向法院起诉360不正当竞争，要求奇虎及其关联公司停止侵权、公开道歉并做出赔偿。【腾讯，360】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-10-27</span>
+                        <p><span>腾讯联合5家主流厂商发布谴责360声明【腾讯，360】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-10-29</span>
+                        <p><span>360 开发的针对 QQ 的 QQ 保镖发布，72 小时内装机量突破 1000 万【腾讯，360】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-10-30~31</span>
+                        <p><span>腾讯向深圳警方报案，同时向工业和信息化部投诉。【腾讯，360】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-11-3</span>
+                        <p><span>“二选一”决定【腾讯，360】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-11-5</span>
+                        <p><span>金山、搜狗、傲游、可牛和百度5家公司也在11月5日联合举行新闻发布会，表示将加入不兼容360软件的行列【腾讯，360】</span></p>
+                    </li>
+                    <li>
                         <span>2010-12</span>
                         <p><span>当当登陆纽交所【李国庆】</span></p>
+                    </li>
+                    <li>
+                        <span>2010-12</span>
+                        <p><span>优酷在美国纽交所上市【优酷】</span></p>
                     </li>
                     <li>
                         <span>2010-冬</span>
@@ -600,6 +660,18 @@
                 <!-- 2011 年 -->
                 <div>
                     <h3 id="2011"><i class="fa fa-clock-o"></i>&nbsp;2011-移动互联网的新基建</h3>
+                    <li>
+                        <span>2011</span>
+                        <p><span>快播成为全国市场占有量第一的播放器【王欣】</span></p>
+                    </li>
+                    <li>
+                        <span>2011-2</span>
+                        <p><span>百度推出百度影音，很快在市场上对快播构成威胁【百度】</span></p>
+                    </li>
+                    <li>
+                        <span>2011-3-30</span>
+                        <p><span>360 在纽交所上市【360】</span></p>
+                    </li>
                     <li>
                         <span>2011-4</span>
                         <p><span>乐蛙创立【赵力，袁潜龙】</span></p>
